# TrackSeriesSaver

./: .flake8  .gitignore  Dockerfile  LICENSE  README.md  docker-compose_example.yml  pyproject.toml  settings_example.yml
.github/workflows/: ci.yml  lint.yml
backend/: .eslintrc.json  package-lock.json  package.json  tsconfig.json
backend/src/: app.ts
backend/src/api/: trackseries.ts
backend/src/middleware/: loginMiddleware.ts
backend/src/models/: Serie.ts  User.ts  models.ts
backend/src/routes/: authRoutes.ts  dataRoute.ts  dataRoutes.ts  index.ts
backend/src/types/: custom.d.ts
backend/src/utils/: getUrl.ts  logger.ts
dev_database/: docker-compose.yml
python_server/: Dockerfile  docker-compose_example.yml  settings_example.yml
python_server/tests/: conftest.py  general_utils.py
python_server/tests/data/: serie2_reference.json
python_server/trackseriessaver/: entities.py
python_server/trackseriessaver/utils/: config.py  logger.py
tests/: general_utils.py  test_trackseries.py
tests/data/: serie1.json  serie1_reference.json  serie2.json
trackseriessaver/: config.py  database.py  entities.py  main.py  settings.py
trackseriessaver/dataSource/: trackseries.py
trackseriessaver/utils/: config.py  logger.py  network.py
