[tool.poetry]
name = "trackseriessaver"
version = "0.1.0"
description = ""
authors = ["DavidGL17 <david.gonzalez@citycable.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0"
requests = "^2.31.0"
zodb = "^5.8.0"
croniter = "^1.4.1"
pytz = "^2023.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
flake8 = "^5.0.4"
black = "^22.10.0"
poethepoet = "^0.18.1"

[tool.poetry.scripts]
trackseriessaver = "trackseriessaver.main:main"

[tool.poe.tasks]
app = "poetry run python trackseriessaver/main.py"
lint = "poetry run flake8 trackseriessaver tests"
test = "poetry run pytest tests"
format = "poetry run black trackseriessaver tests --line-length 120 --check"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
